fixed z-index

--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 320px) and (max-width: 428px) {
   .modal-raiting-wrapper {
     width: 95%;
+    z-index: 950;
   }
 }
 
